# loodos-arge-normx-cricket

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  synthesizer.py
geppetto/: __init__.py  api.py  executor.py  scheduler.py
geppetto/data/models/: cdn.py  data_source.py  execution.py  rule.py
geppetto/db/: client.py
templates/child_app/: .gitignore.j2  config.py.j2  main.py.j2  pyproject.toml.j2
templates/child_app/logic/: detectors.py.j2  processor.py.j2
templates/child_app/utils/: __init__.py.j2  data_loader.py.j2
